parser.automaton
State 0:
program' -> . program [ # ]
-- On program shift to state 1
-- On decls shift to state 2
-- On VOID reduce production decls -> 
-- On STRING reduce production decls -> 
-- On ROW reduce production decls -> 
-- On MATRIX reduce production decls -> 
-- On INT reduce production decls -> 
-- On FLOAT reduce production decls -> 
-- On EOF reduce production decls -> 
-- On DEF reduce production decls -> 
-- On CHAR reduce production decls -> 
-- On BOOL reduce production decls -> 

State 1:
program' -> program . [ # ]
-- On # accept program

State 2:
decls -> decls . vdecl [ VOID STRING ROW MATRIX INT FLOAT EOF DEF CHAR BOOL ]
decls -> decls . fdecl [ VOID STRING ROW MATRIX INT FLOAT EOF DEF CHAR BOOL ]
program -> decls . EOF [ # ]
-- On VOID shift to state 3
-- On STRING shift to state 4
-- On ROW shift to state 5
-- On MATRIX shift to state 6
-- On INT shift to state 7
-- On FLOAT shift to state 8
-- On EOF shift to state 9
-- On DEF shift to state 10
-- On CHAR shift to state 11
-- On BOOL shift to state 12
-- On vdecl shift to state 190
-- On typ shift to state 50
-- On tuple_typ shift to state 21
-- On row_typ shift to state 22
-- On primitive shift to state 23
-- On matrix_typ shift to state 44
-- On fdecl shift to state 191

State 3:
primitive -> VOID . [ LSQBRACE LPERCENT ID ]
-- On LSQBRACE reduce production primitive -> VOID 
-- On LPERCENT reduce production primitive -> VOID 
-- On ID reduce production primitive -> VOID 

State 4:
typ -> STRING . [ LPERCENT ID ]
-- On LPERCENT reduce production typ -> STRING 
-- On ID reduce production typ -> STRING 

State 5:
typ -> ROW . [ LPERCENT ID ]
-- On LPERCENT reduce production typ -> ROW 
-- On ID reduce production typ -> ROW 

State 6:
typ -> MATRIX . [ LPERCENT ID ]
-- On LPERCENT reduce production typ -> MATRIX 
-- On ID reduce production typ -> MATRIX 

State 7:
primitive -> INT . [ LSQBRACE LPERCENT ID ]
-- On LSQBRACE reduce production primitive -> INT 
-- On LPERCENT reduce production primitive -> INT 
-- On ID reduce production primitive -> INT 

State 8:
primitive -> FLOAT . [ LSQBRACE LPERCENT ID ]
-- On LSQBRACE reduce production primitive -> FLOAT 
-- On LPERCENT reduce production primitive -> FLOAT 
-- On ID reduce production primitive -> FLOAT 

State 9:
program -> decls EOF . [ # ]
-- On # reduce production program -> decls EOF 

State 10:
fdecl -> DEF . typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE [ VOID STRING ROW MATRIX INT FLOAT EOF DEF CHAR BOOL ]
-- On VOID shift to state 3
-- On STRING shift to state 4
-- On ROW shift to state 5
-- On MATRIX shift to state 6
-- On INT shift to state 7
-- On FLOAT shift to state 8
-- On CHAR shift to state 11
-- On BOOL shift to state 12
-- On typ shift to state 13
-- On tuple_typ shift to state 21
-- On row_typ shift to state 22
-- On primitive shift to state 23
-- On matrix_typ shift to state 44

State 11:
primitive -> CHAR . [ LSQBRACE LPERCENT ID ]
-- On LSQBRACE reduce production primitive -> CHAR 
-- On LPERCENT reduce production primitive -> CHAR 
-- On ID reduce production primitive -> CHAR 

State 12:
primitive -> BOOL . [ LSQBRACE LPERCENT ID ]
-- On LSQBRACE reduce production primitive -> BOOL 
-- On LPERCENT reduce production primitive -> BOOL 
-- On ID reduce production primitive -> BOOL 

State 13:
fdecl -> DEF typ . ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE [ VOID STRING ROW MATRIX INT FLOAT EOF DEF CHAR BOOL ]
tuple_typ -> typ . LPERCENT INT_LIT RPERCENT [ LSQBRACE LPERCENT ID ]
-- On LPERCENT shift to state 14
-- On ID shift to state 17

State 14:
tuple_typ -> typ LPERCENT . INT_LIT RPERCENT [ LSQBRACE LPERCENT ID ]
-- On INT_LIT shift to state 15

State 15:
tuple_typ -> typ LPERCENT INT_LIT . RPERCENT [ LSQBRACE LPERCENT ID ]
-- On RPERCENT shift to state 16

State 16:
tuple_typ -> typ LPERCENT INT_LIT RPERCENT . [ LSQBRACE LPERCENT ID ]
-- On LSQBRACE reduce production tuple_typ -> typ LPERCENT INT_LIT RPERCENT 
-- On LPERCENT reduce production tuple_typ -> typ LPERCENT INT_LIT RPERCENT 
-- On ID reduce production tuple_typ -> typ LPERCENT INT_LIT RPERCENT 

State 17:
fdecl -> DEF typ ID . LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE [ VOID STRING ROW MATRIX INT FLOAT EOF DEF CHAR BOOL ]
-- On LPAREN shift to state 18

State 18:
fdecl -> DEF typ ID LPAREN . formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE [ VOID STRING ROW MATRIX INT FLOAT EOF DEF CHAR BOOL ]
-- On VOID shift to state 3
-- On STRING shift to state 4
-- On ROW shift to state 5
-- On MATRIX shift to state 6
-- On INT shift to state 7
-- On FLOAT shift to state 8
-- On CHAR shift to state 11
-- On BOOL shift to state 12
-- On typ shift to state 19
-- On tuple_typ shift to state 21
-- On row_typ shift to state 22
-- On primitive shift to state 23
-- On matrix_typ shift to state 44
-- On formals_opt shift to state 45
-- On formal_list shift to state 186
-- On RPAREN reduce production formals_opt -> 

State 19:
formal_list -> typ . ID [ RPAREN COMMA ]
tuple_typ -> typ . LPERCENT INT_LIT RPERCENT [ LSQBRACE LPERCENT ID ]
-- On LPERCENT shift to state 14
-- On ID shift to state 20

State 20:
formal_list -> typ ID . [ RPAREN COMMA ]
-- On RPAREN reduce production formal_list -> typ ID 
-- On COMMA reduce production formal_list -> typ ID 

State 21:
primitive -> tuple_typ . [ LSQBRACE LPERCENT ID ]
-- On LSQBRACE reduce production primitive -> tuple_typ 
-- On LPERCENT reduce production primitive -> tuple_typ 
-- On ID reduce production primitive -> tuple_typ 

State 22:
typ -> row_typ . [ LPERCENT ID ]
-- On LPERCENT reduce production typ -> row_typ 
-- On ID reduce production typ -> row_typ 

State 23:
matrix_typ -> primitive . LSQBRACE INT_LIT RSQBRACE LSQBRACE INT_LIT RSQBRACE [ LPERCENT ID ]
row_typ -> primitive . LSQBRACE INT_LIT RSQBRACE [ LPERCENT ID ]
row_typ -> primitive . LSQBRACE tuple_literal RSQBRACE [ LPERCENT ID ]
typ -> primitive . [ LPERCENT ID ]
-- On LSQBRACE shift to state 24
-- On LPERCENT reduce production typ -> primitive 
-- On ID reduce production typ -> primitive 

State 24:
matrix_typ -> primitive LSQBRACE . INT_LIT RSQBRACE LSQBRACE INT_LIT RSQBRACE [ LPERCENT ID ]
row_typ -> primitive LSQBRACE . INT_LIT RSQBRACE [ LPERCENT ID ]
row_typ -> primitive LSQBRACE . tuple_literal RSQBRACE [ LPERCENT ID ]
-- On LPERCENT shift to state 25
-- On INT_LIT shift to state 37
-- On tuple_literal shift to state 42

State 25:
tuple_literal -> LPERCENT . array_literal RPERCENT [ TIMES SEMI RSQBRACE RPERCENT RPAREN RMPERCENT PLUSEQ PLUS OR NEQ MTIMES MPLUS MMINUS MINUS MEQ MDIVIDE LT LEQ GT GEQ EQ DIVIDE COMMA BAR ASSIGN AND ]
-- On TRUE shift to state 26
-- On STRING_LIT shift to state 27
-- On INT_LIT shift to state 28
-- On FLOAT_LIT shift to state 29
-- On FALSE shift to state 30
-- On CHAR_LIT shift to state 31
-- On primitives shift to state 32
-- On array_literal shift to state 33

State 26:
primitives -> TRUE . [ TIMES SEMI RSQBRACE RPERCENT RPAREN RMPERCENT PLUSEQ PLUS OR NEQ MTIMES MPLUS MMINUS MINUS MEQ MDIVIDE LT LEQ GT GEQ EQ DIVIDE COMMA BAR ASSIGN AND ]
-- On TIMES reduce production primitives -> TRUE 
-- On SEMI reduce production primitives -> TRUE 
-- On RSQBRACE reduce production primitives -> TRUE 
-- On RPERCENT reduce production primitives -> TRUE 
-- On RPAREN reduce production primitives -> TRUE 
-- On RMPERCENT reduce production primitives -> TRUE 
-- On PLUSEQ reduce production primitives -> TRUE 
-- On PLUS reduce production primitives -> TRUE 
-- On OR reduce production primitives -> TRUE 
-- On NEQ reduce production primitives -> TRUE 
-- On MTIMES reduce production primitives -> TRUE 
-- On MPLUS reduce production primitives -> TRUE 
-- On MMINUS reduce production primitives -> TRUE 
-- On MINUS reduce production primitives -> TRUE 
-- On MEQ reduce production primitives -> TRUE 
-- On MDIVIDE reduce production primitives -> TRUE 
-- On LT reduce production primitives -> TRUE 
-- On LEQ reduce production primitives -> TRUE 
-- On GT reduce production primitives -> TRUE 
-- On GEQ reduce production primitives -> TRUE 
-- On EQ reduce production primitives -> TRUE 
-- On DIVIDE reduce production primitives -> TRUE 
-- On COMMA reduce production primitives -> TRUE 
-- On BAR reduce production primitives -> TRUE 
-- On ASSIGN reduce production primitives -> TRUE 
-- On AND reduce production primitives -> TRUE 

State 27:
primitives -> STRING_LIT . [ TIMES SEMI RSQBRACE RPERCENT RPAREN RMPERCENT PLUSEQ PLUS OR NEQ MTIMES MPLUS MMINUS MINUS MEQ MDIVIDE LT LEQ GT GEQ EQ DIVIDE COMMA BAR ASSIGN AND ]
-- On TIMES reduce production primitives -> STRING_LIT 
-- On SEMI reduce production primitives -> STRING_LIT 
-- On RSQBRACE reduce production primitives -> STRING_LIT 
-- On RPERCENT reduce production primitives -> STRING_LIT 
-- On RPAREN reduce production primitives -> STRING_LIT 
-- On RMPERCENT reduce production primitives -> STRING_LIT 
-- On PLUSEQ reduce production primitives -> STRING_LIT 
-- On PLUS reduce production primitives -> STRING_LIT 
-- On OR reduce production primitives -> STRING_LIT 
-- On NEQ reduce production primitives -> STRING_LIT 
-- On MTIMES reduce production primitives -> STRING_LIT 
-- On MPLUS reduce production primitives -> STRING_LIT 
-- On MMINUS reduce production primitives -> STRING_LIT 
-- On MINUS reduce production primitives -> STRING_LIT 
-- On MEQ reduce production primitives -> STRING_LIT 
-- On MDIVIDE reduce production primitives -> STRING_LIT 
-- On LT reduce production primitives -> STRING_LIT 
-- On LEQ reduce production primitives -> STRING_LIT 
-- On GT reduce production primitives -> STRING_LIT 
-- On GEQ reduce production primitives -> STRING_LIT 
-- On EQ reduce production primitives -> STRING_LIT 
-- On DIVIDE reduce production primitives -> STRING_LIT 
-- On COMMA reduce production primitives -> STRING_LIT 
-- On BAR reduce production primitives -> STRING_LIT 
-- On ASSIGN reduce production primitives -> STRING_LIT 
-- On AND reduce production primitives -> STRING_LIT 

State 28:
primitives -> INT_LIT . [ TIMES SEMI RSQBRACE RPERCENT RPAREN RMPERCENT PLUSEQ PLUS OR NEQ MTIMES MPLUS MMINUS MINUS MEQ MDIVIDE LT LEQ GT GEQ EQ DIVIDE COMMA BAR ASSIGN AND ]
-- On TIMES reduce production primitives -> INT_LIT 
-- On SEMI reduce production primitives -> INT_LIT 
-- On RSQBRACE reduce production primitives -> INT_LIT 
-- On RPERCENT reduce production primitives -> INT_LIT 
-- On RPAREN reduce production primitives -> INT_LIT 
-- On RMPERCENT reduce production primitives -> INT_LIT 
-- On PLUSEQ reduce production primitives -> INT_LIT 
-- On PLUS reduce production primitives -> INT_LIT 
-- On OR reduce production primitives -> INT_LIT 
-- On NEQ reduce production primitives -> INT_LIT 
-- On MTIMES reduce production primitives -> INT_LIT 
-- On MPLUS reduce production primitives -> INT_LIT 
-- On MMINUS reduce production primitives -> INT_LIT 
-- On MINUS reduce production primitives -> INT_LIT 
-- On MEQ reduce production primitives -> INT_LIT 
-- On MDIVIDE reduce production primitives -> INT_LIT 
-- On LT reduce production primitives -> INT_LIT 
-- On LEQ reduce production primitives -> INT_LIT 
-- On GT reduce production primitives -> INT_LIT 
-- On GEQ reduce production primitives -> INT_LIT 
-- On EQ reduce production primitives -> INT_LIT 
-- On DIVIDE reduce production primitives -> INT_LIT 
-- On COMMA reduce production primitives -> INT_LIT 
-- On BAR reduce production primitives -> INT_LIT 
-- On ASSIGN reduce production primitives -> INT_LIT 
-- On AND reduce production primitives -> INT_LIT 

State 29:
primitives -> FLOAT_LIT . [ TIMES SEMI RSQBRACE RPERCENT RPAREN RMPERCENT PLUSEQ PLUS OR NEQ MTIMES MPLUS MMINUS MINUS MEQ MDIVIDE LT LEQ GT GEQ EQ DIVIDE COMMA BAR ASSIGN AND ]
-- On TIMES reduce production primitives -> FLOAT_LIT 
-- On SEMI reduce production primitives -> FLOAT_LIT 
-- On RSQBRACE reduce production primitives -> FLOAT_LIT 
-- On RPERCENT reduce production primitives -> FLOAT_LIT 
-- On RPAREN reduce production primitives -> FLOAT_LIT 
-- On RMPERCENT reduce production primitives -> FLOAT_LIT 
-- On PLUSEQ reduce production primitives -> FLOAT_LIT 
-- On PLUS reduce production primitives -> FLOAT_LIT 
-- On OR reduce production primitives -> FLOAT_LIT 
-- On NEQ reduce production primitives -> FLOAT_LIT 
-- On MTIMES reduce production primitives -> FLOAT_LIT 
-- On MPLUS reduce production primitives -> FLOAT_LIT 
-- On MMINUS reduce production primitives -> FLOAT_LIT 
-- On MINUS reduce production primitives -> FLOAT_LIT 
-- On MEQ reduce production primitives -> FLOAT_LIT 
-- On MDIVIDE reduce production primitives -> FLOAT_LIT 
-- On LT reduce production primitives -> FLOAT_LIT 
-- On LEQ reduce production primitives -> FLOAT_LIT 
-- On GT reduce production primitives -> FLOAT_LIT 
-- On GEQ reduce production primitives -> FLOAT_LIT 
-- On EQ reduce production primitives -> FLOAT_LIT 
-- On DIVIDE reduce production primitives -> FLOAT_LIT 
-- On COMMA reduce production primitives -> FLOAT_LIT 
-- On BAR reduce production primitives -> FLOAT_LIT 
-- On ASSIGN reduce production primitives -> FLOAT_LIT 
-- On AND reduce production primitives -> FLOAT_LIT 

State 30:
primitives -> FALSE . [ TIMES SEMI RSQBRACE RPERCENT RPAREN RMPERCENT PLUSEQ PLUS OR NEQ MTIMES MPLUS MMINUS MINUS MEQ MDIVIDE LT LEQ GT GEQ EQ DIVIDE COMMA BAR ASSIGN AND ]
-- On TIMES reduce production primitives -> FALSE 
-- On SEMI reduce production primitives -> FALSE 
-- On RSQBRACE reduce production primitives -> FALSE 
-- On RPERCENT reduce production primitives -> FALSE 
-- On RPAREN reduce production primitives -> FALSE 
-- On RMPERCENT reduce production primitives -> FALSE 
-- On PLUSEQ reduce production primitives -> FALSE 
-- On PLUS reduce production primitives -> FALSE 
-- On OR reduce production primitives -> FALSE 
-- On NEQ reduce production primitives -> FALSE 
-- On MTIMES reduce production primitives -> FALSE 
-- On MPLUS reduce production primitives -> FALSE 
-- On MMINUS reduce production primitives -> FALSE 
-- On MINUS reduce production primitives -> FALSE 
-- On MEQ reduce production primitives -> FALSE 
-- On MDIVIDE reduce production primitives -> FALSE 
-- On LT reduce production primitives -> FALSE 
-- On LEQ reduce production primitives -> FALSE 
-- On GT reduce production primitives -> FALSE 
-- On GEQ reduce production primitives -> FALSE 
-- On EQ reduce production primitives -> FALSE 
-- On DIVIDE reduce production primitives -> FALSE 
-- On COMMA reduce production primitives -> FALSE 
-- On BAR reduce production primitives -> FALSE 
-- On ASSIGN reduce production primitives -> FALSE 
-- On AND reduce production primitives -> FALSE 

State 31:
primitives -> CHAR_LIT . [ TIMES SEMI RSQBRACE RPERCENT RPAREN RMPERCENT PLUSEQ PLUS OR NEQ MTIMES MPLUS MMINUS MINUS MEQ MDIVIDE LT LEQ GT GEQ EQ DIVIDE COMMA BAR ASSIGN AND ]
-- On TIMES reduce production primitives -> CHAR_LIT 
-- On SEMI reduce production primitives -> CHAR_LIT 
-- On RSQBRACE reduce production primitives -> CHAR_LIT 
-- On RPERCENT reduce production primitives -> CHAR_LIT 
-- On RPAREN reduce production primitives -> CHAR_LIT 
-- On RMPERCENT reduce production primitives -> CHAR_LIT 
-- On PLUSEQ reduce production primitives -> CHAR_LIT 
-- On PLUS reduce production primitives -> CHAR_LIT 
-- On OR reduce production primitives -> CHAR_LIT 
-- On NEQ reduce production primitives -> CHAR_LIT 
-- On MTIMES reduce production primitives -> CHAR_LIT 
-- On MPLUS reduce production primitives -> CHAR_LIT 
-- On MMINUS reduce production primitives -> CHAR_LIT 
-- On MINUS reduce production primitives -> CHAR_LIT 
-- On MEQ reduce production primitives -> CHAR_LIT 
-- On MDIVIDE reduce production primitives -> CHAR_LIT 
-- On LT reduce production primitives -> CHAR_LIT 
-- On LEQ reduce production primitives -> CHAR_LIT 
-- On GT reduce production primitives -> CHAR_LIT 
-- On GEQ reduce production primitives -> CHAR_LIT 
-- On EQ reduce production primitives -> CHAR_LIT 
-- On DIVIDE reduce production primitives -> CHAR_LIT 
-- On COMMA reduce production primitives -> CHAR_LIT 
-- On BAR reduce production primitives -> CHAR_LIT 
-- On ASSIGN reduce production primitives -> CHAR_LIT 
-- On AND reduce production primitives -> CHAR_LIT 

State 32:
array_literal -> primitives . [ RPERCENT COMMA ]
-- On RPERCENT reduce production array_literal -> primitives 
-- On COMMA reduce production array_literal -> primitives 

State 33:
array_literal -> array_literal . COMMA primitives [ RPERCENT COMMA ]
tuple_literal -> LPERCENT array_literal . RPERCENT [ TIMES SEMI RSQBRACE RPERCENT RPAREN RMPERCENT PLUSEQ PLUS OR NEQ MTIMES MPLUS MMINUS MINUS MEQ MDIVIDE LT LEQ GT GEQ EQ DIVIDE COMMA BAR ASSIGN AND ]
-- On RPERCENT shift to state 34
-- On COMMA shift to state 35

State 34:
tuple_literal -> LPERCENT array_literal RPERCENT . [ TIMES SEMI RSQBRACE RPERCENT RPAREN RMPERCENT PLUSEQ PLUS OR NEQ MTIMES MPLUS MMINUS MINUS MEQ MDIVIDE LT LEQ GT GEQ EQ DIVIDE COMMA BAR ASSIGN AND ]
-- On TIMES reduce production tuple_literal -> LPERCENT array_literal RPERCENT 
-- On SEMI reduce production tuple_literal -> LPERCENT array_literal RPERCENT 
-- On RSQBRACE reduce production tuple_literal -> LPERCENT array_literal RPERCENT 
-- On RPERCENT reduce production tuple_literal -> LPERCENT array_literal RPERCENT 
-- On RPAREN reduce production tuple_literal -> LPERCENT array_literal RPERCENT 
-- On RMPERCENT reduce production tuple_literal -> LPERCENT array_literal RPERCENT 
-- On PLUSEQ reduce production tuple_literal -> LPERCENT array_literal RPERCENT 
-- On PLUS reduce production tuple_literal -> LPERCENT array_literal RPERCENT 
-- On OR reduce production tuple_literal -> LPERCENT array_literal RPERCENT 
-- On NEQ reduce production tuple_literal -> LPERCENT array_literal RPERCENT 
-- On MTIMES reduce production tuple_literal -> LPERCENT array_literal RPERCENT 
-- On MPLUS reduce production tuple_literal -> LPERCENT array_literal RPERCENT 
-- On MMINUS reduce production tuple_literal -> LPERCENT array_literal RPERCENT 
-- On MINUS reduce production tuple_literal -> LPERCENT array_literal RPERCENT 
-- On MEQ reduce production tuple_literal -> LPERCENT array_literal RPERCENT 
-- On MDIVIDE reduce production tuple_literal -> LPERCENT array_literal RPERCENT 
-- On LT reduce production tuple_literal -> LPERCENT array_literal RPERCENT 
-- On LEQ reduce production tuple_literal -> LPERCENT array_literal RPERCENT 
-- On GT reduce production tuple_literal -> LPERCENT array_literal RPERCENT 
-- On GEQ reduce production tuple_literal -> LPERCENT array_literal RPERCENT 
-- On EQ reduce production tuple_literal -> LPERCENT array_literal RPERCENT 
-- On DIVIDE reduce production tuple_literal -> LPERCENT array_literal RPERCENT 
-- On COMMA reduce production tuple_literal -> LPERCENT array_literal RPERCENT 
-- On BAR reduce production tuple_literal -> LPERCENT array_literal RPERCENT 
-- On ASSIGN reduce production tuple_literal -> LPERCENT array_literal RPERCENT 
-- On AND reduce production tuple_literal -> LPERCENT array_literal RPERCENT 

State 35:
array_literal -> array_literal COMMA . primitives [ RPERCENT COMMA ]
-- On TRUE shift to state 26
-- On STRING_LIT shift to state 27
-- On INT_LIT shift to state 28
-- On FLOAT_LIT shift to state 29
-- On FALSE shift to state 30
-- On CHAR_LIT shift to state 31
-- On primitives shift to state 36

State 36:
array_literal -> array_literal COMMA primitives . [ RPERCENT COMMA ]
-- On RPERCENT reduce production array_literal -> array_literal COMMA primitives 
-- On COMMA reduce production array_literal -> array_literal COMMA primitives 

State 37:
matrix_typ -> primitive LSQBRACE INT_LIT . RSQBRACE LSQBRACE INT_LIT RSQBRACE [ LPERCENT ID ]
row_typ -> primitive LSQBRACE INT_LIT . RSQBRACE [ LPERCENT ID ]
-- On RSQBRACE shift to state 38

State 38:
matrix_typ -> primitive LSQBRACE INT_LIT RSQBRACE . LSQBRACE INT_LIT RSQBRACE [ LPERCENT ID ]
row_typ -> primitive LSQBRACE INT_LIT RSQBRACE . [ LPERCENT ID ]
-- On LSQBRACE shift to state 39
-- On LPERCENT reduce production row_typ -> primitive LSQBRACE INT_LIT RSQBRACE 
-- On ID reduce production row_typ -> primitive LSQBRACE INT_LIT RSQBRACE 

State 39:
matrix_typ -> primitive LSQBRACE INT_LIT RSQBRACE LSQBRACE . INT_LIT RSQBRACE [ LPERCENT ID ]
-- On INT_LIT shift to state 40

State 40:
matrix_typ -> primitive LSQBRACE INT_LIT RSQBRACE LSQBRACE INT_LIT . RSQBRACE [ LPERCENT ID ]
-- On RSQBRACE shift to state 41

State 41:
matrix_typ -> primitive LSQBRACE INT_LIT RSQBRACE LSQBRACE INT_LIT RSQBRACE . [ LPERCENT ID ]
-- On LPERCENT reduce production matrix_typ -> primitive LSQBRACE INT_LIT RSQBRACE LSQBRACE INT_LIT RSQBRACE 
-- On ID reduce production matrix_typ -> primitive LSQBRACE INT_LIT RSQBRACE LSQBRACE INT_LIT RSQBRACE 

State 42:
row_typ -> primitive LSQBRACE tuple_literal . RSQBRACE [ LPERCENT ID ]
-- On RSQBRACE shift to state 43

State 43:
row_typ -> primitive LSQBRACE tuple_literal RSQBRACE . [ LPERCENT ID ]
-- On LPERCENT reduce production row_typ -> primitive LSQBRACE tuple_literal RSQBRACE 
-- On ID reduce production row_typ -> primitive LSQBRACE tuple_literal RSQBRACE 

State 44:
typ -> matrix_typ . [ LPERCENT ID ]
-- On LPERCENT reduce production typ -> matrix_typ 
-- On ID reduce production typ -> matrix_typ 

State 45:
fdecl -> DEF typ ID LPAREN formals_opt . RPAREN LBRACE vdecl_list stmt_list RBRACE [ VOID STRING ROW MATRIX INT FLOAT EOF DEF CHAR BOOL ]
-- On RPAREN shift to state 46

State 46:
fdecl -> DEF typ ID LPAREN formals_opt RPAREN . LBRACE vdecl_list stmt_list RBRACE [ VOID STRING ROW MATRIX INT FLOAT EOF DEF CHAR BOOL ]
-- On LBRACE shift to state 47
